frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shorty-app
spec:
  selector:
    app: shorty-app
  ports:
    - protocol: TCP
      port: 9005
      targetPort: 9005
