frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shorty-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.org/server-snippets: |
      location /create {
          limit_except POST HEAD OPTIONS {
             deny all;
          }
      }
      location ~ "\/([a-zA-Z0-9]{5})$" {
          limit_except GET HEAD OPTIONS {
             deny all;
          }
          rewrite ^/(/.*)$ $1 break;
      }
    nginx.org/location-snippets: |
      proxy_http_version 1.1;
      proxy_ssl_server_name on;
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - shorty.localdev.me
    secretName: shorty-secret-tls
  rules:
    - host: shorty.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shorty-app
                port:
                  number: 9005
          - path: /create
            pathType: Prefix
            backend:
              service:
                name: shorty-api
                port:
                  number: 8080
          - path: /([a-zA-Z0-9]{5})$(/|$)
            pathType: Prefix
            backend:
              service:
                name: shorty-api
                port:
                  number: 8080
